--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -393,77 +393,7 @@ button:focus {
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out
 }
-#desktop .o-container__chain-preview .o-container-chain-20-dot,
-#desktop .o-container__chain-preview .o-container-chain-24-dot,
-#desktop .o-container__chain-preview .o-container-chain-28-dot,
-#desktop .o-container__chain-preview .o-container-chain-30-dot,
-#desktop .o-container__chain-preview .o-container-chain-dots {
-    background-repeat: no-repeat;
-    background-position: 48.5% 0;
-    width: 100%;
-    height: 98%;
-    position: absolute;
-    top: 30px;
-    z-index: -1;
-    max-height: 1125px
-}
-@media only screen and (max-width: 1200px) {
-    #desktop .o-container__chain-preview .o-container-chain-20-dot,
-    #desktop .o-container__chain-preview .o-container-chain-24-dot,
-    #desktop .o-container__chain-preview .o-container-chain-28-dot,
-    #desktop .o-container__chain-preview .o-container-chain-30-dot,
-    #desktop .o-container__chain-preview .o-container-chain-dots {
-        background-position: 48% 0
-    }
-}
-#desktop .o-container__chain-preview .o-container-chain-20-dot .o-container-chain-20-dot,
-#desktop .o-container__chain-preview .o-container-chain-24-dot .o-container-chain-20-dot,
-#desktop .o-container__chain-preview .o-container-chain-28-dot .o-container-chain-20-dot,
-#desktop .o-container__chain-preview .o-container-chain-30-dot .o-container-chain-20-dot,
-#desktop .o-container__chain-preview .o-container-chain-dots .o-container-chain-20-dot {
-    top: -10px;
-    background-image: url(chain-20in-dot-4.png)
-}
-#desktop .o-container__chain-preview .o-container-chain-20-dot .o-container-chain-24-dot,
-#desktop .o-container__chain-preview .o-container-chain-24-dot .o-container-chain-24-dot,
-#desktop .o-container__chain-preview .o-container-chain-28-dot .o-container-chain-24-dot,
-#desktop .o-container__chain-preview .o-container-chain-30-dot .o-container-chain-24-dot,
-#desktop .o-container__chain-preview .o-container-chain-dots .o-container-chain-24-dot {
-    top: 8px;
-    width: calc(100% - 2px);
-    background-image: url(chain-24in-dot-4.png)
-}
-#desktop .o-container__chain-preview .o-container-chain-20-dot .o-container-chain-28-dot,
-#desktop .o-container__chain-preview .o-container-chain-24-dot .o-container-chain-28-dot,
-#desktop .o-container__chain-preview .o-container-chain-28-dot .o-container-chain-28-dot,
-#desktop .o-container__chain-preview .o-container-chain-30-dot .o-container-chain-28-dot,
-#desktop .o-container__chain-preview .o-container-chain-dots .o-container-chain-28-dot {
-    top: 10px;
-    background-image: url(chain-28in-dot-4.png)
-}
-#desktop .o-container__chain-preview .o-container-chain-20-dot .o-container-chain-30-dot,
-#desktop .o-container__chain-preview .o-container-chain-24-dot .o-container-chain-30-dot,
-#desktop .o-container__chain-preview .o-container-chain-28-dot .o-container-chain-30-dot,
-#desktop .o-container__chain-preview .o-container-chain-30-dot .o-container-chain-30-dot,
-#desktop .o-container__chain-preview .o-container-chain-dots .o-container-chain-30-dot {
-    top: -5px;
-    background-image: url(chain-30in-dot-4.png)
-}
-#desktop .o-container__chain-preview .o-container-chain-20,
-#desktop .o-container__chain-preview .o-container-chain-24,
-#desktop .o-container__chain-preview .o-container-chain-28,
-#desktop .o-container__chain-preview .o-container-chain-30,
-#desktop .o-container__chain-preview .o-container-chains,
-#desktop .o-container__chain-preview .o-container-pendants {
-    background-repeat: no-repeat;
-    background-position: 48% 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 30px;
-    z-index: -1;
-    max-height: 1125px
-}
+
 
 #desktop .o-container__chain-preview .o-container-pendants {
   top: 60px;
@@ -479,16 +409,16 @@ button:focus {
     left: 46.5%
 }
 #desktop .o-container__chain-preview .o-container-pendants-20 {
-    top: 245px
+    top: 236px
 }
 #desktop .o-container__chain-preview .o-container-pendants-24 {
     top: 320px
 }
 #desktop .o-container__chain-preview .o-container-pendants-28 {
-    top: 390px
+    top: 396px
 }
 #desktop .o-container__chain-preview .o-container-pendants-30 {
-    top: 450px
+    top: 440px
 }
 #desktop .o-container__chain-preview .o-container-pendants img {
     width: auto;
@@ -819,7 +749,6 @@ button:focus {
     border: none;
     margin: 0;
     padding: 0;
-    text-decoration: underline;
     text-transform: uppercase;
     font-size: 12px;
     color: #fff;
@@ -1027,6 +956,12 @@ button:focus {
     text-decoration: none;
     float: right
 }
+#desktop .c-header-summary__components .c-header-summary__labels .c-chain-items-last div .c-button-close .collapse-text {
+  	position: relative;
+    font-size: 14px;
+    right: 30px;
+    bottom: 2px
+}
 #desktop .c-header-summary__row {
     display: -webkit-box;
     display: flex;
@@ -1109,7 +1044,8 @@ button:focus {
     font-size: 12px;
     height: 40px;
     line-height: 40px;
-    padding-left: 30px
+    padding-left: 30px;
+    display: none
 }
 #desktop .c-header-summary-total .c-total-saved .c-total-saved-value {
     float: right;
@@ -1227,11 +1163,17 @@ button:focus {
 #desktop .c-header-summary__empty .c-summary-button-container button {
     position: absolute;
     top: 30px;
-    width: 20px;
     height: 20px;
     right: 30px;
     padding-left: 0;
-    left: initial
+    left: initial;
+    text-align: right
+}
+#desktop .c-header-summary__empty .c-summary-button-container button .collapse-text {
+    position: relative;
+    font-size: 14px;
+    right: 30px;
+    bottom: 2px
 }
 .c-drawer--scrollable,
 .c-drawer--top {
@@ -1273,6 +1215,13 @@ button:focus {
     -webkit-box-direction: normal;
     -webkit-box-pack: end;
     justify-content: flex-end
+}
+.c-drawer--top-bar .collapse-summary { 
+  	line-height: 63px;
+	text-align: center;
+	font-size: 14px;
+	letter-spacing: 1px;
+	cursor: pointer
 }
 .c-drawer--row,
 .c-drawer--top .built-chain ul li {
@@ -1494,7 +1443,8 @@ button:focus {
     height: 60px;
     line-height: 1;
     padding-left: 21px;
-    padding-right: 21px
+    padding-right: 21px;
+    display: none
 }
 .c-drawer--top .prices {
     display: flex;
@@ -1757,24 +1707,26 @@ button:focus {
     -webkit-transition: -webkit-transform 1s ease-in;
     transition: -webkit-transform 1s ease-in;
     transition: transform 1s ease-in;
-    transition: transform 1s ease-in, -webkit-transform 1s ease-in
+    transition: transform 1s ease-in, -webkit-transform 1s ease-in;
+  	transform-origin: top;
+    transform: scale(1.5);
 }
 .c-preview.is-zoomed {
-    -webkit-transform: scale(1.5) translateY(15%);
-    transform: scale(1.5) translateY(15%)
+    -webkit-transform: scale(2.5);
+    transform: scale(2.5);
 }
 .c-preview.is-zoomed--deeper {
-    -webkit-transform: scale(2) translateY(20%);
-    transform: scale(2) translateY(20%)
+    -webkit-transform: scale(3);
+    transform: scale(3);
 }
 .is-ios .c-preview.is-zoomed--deeper {
-    -webkit-transform: scale(2) translateY(15%);
-    transform: scale(2) translateY(15%)
+    -webkit-transform: scale(3);
+    transform: scale(3);
 }
 .c-preview__bg {
     background-color: #dad9d5;
     background-image: url({{'model.png' | asset_url}});
-    background-size: cover;
+    background-size: contain;
     background-position: 50% 0;
     background-repeat: no-repeat
 }
@@ -1788,35 +1740,12 @@ button:focus {
 .c-preview-layer--pendants.is-hidden {
     opacity: 0
 }
-.c-preview-layer--chain,
-.c-preview-layer--chain-outline {
-    background-repeat: no-repeat;
-    background-position: 47% .25%;
-    background-size: auto 43%;
-    opacity: 1;
-    -webkit-transition: opacity .25s;
-    transition: opacity .25s
-}
+
 .c-preview-layer--chain-outline.is-hidden,
 .c-preview-layer--chain.is-hidden {
     opacity: 0
 }
-.o-chain-outline--20 {
-    background-image: url(chain-20in-dot-4.png);
-    background-position-y: -1.5%
-}
-.o-chain-outline--24 {
-    background-image: url(chain-24in-dot-4.png);
-    background-position-y: 1%
-}
-.o-chain-outline--28 {
-    background-image: url(chain-28in-dot-4.png);
-    background-position-y: 1%
-}
-.o-chain-outline--30 {
-    background-image: url(chain-30in-dot-4.png);
-    background-position-y: -1%
-}
+
 .c-preview-layer--pendant {
     background-size: 24px auto;
     background-position: 50% 0;
@@ -1835,10 +1764,10 @@ button:focus {
     background-position: calc(50% - 3px) 30.5%
 }
 .c-preview-layer--pendant--28 {
-    background-position: calc(50% - 3px) 37.1%
+    background-position: calc(50% - 3px) 37.5%
 }
 .c-preview-layer--pendant--30 {
-    background-position: calc(50% - 3px) 42.5%
+    background-position: calc(51% - 3px) 42%;
 }
 .pendant-0-20,
 .pendant-0-24,
@@ -1953,14 +1882,16 @@ button:focus {
     left: 0;
     top: 58px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
     color: #fff;
     background-color: #000
 }
 #mobile .modal-content {
     padding: 2.25em 2.25em 6em;
-    font-size: 14px
+    font-size: 14px;
+    overflow-y: auto;
+    height: 100vh
 }
 #mobile .c-metal-type__more_info h3 {
     padding: 0 2em;
@@ -1971,7 +1902,9 @@ button:focus {
 #mobile .close-modal {
     float: right;
     cursor: pointer;
-    margin: 1em 1em 0 0
+    margin: 1em 1em 0 0;
+    position: fixed;
+    right: 0
 }
 #mobile .close-modal:focus,
 #mobile .close:hover {
@@ -2048,7 +1981,7 @@ button:focus {
 }
 #desktop .c-choice-panel--metal-type .c-metal-type__choice-head {
     color: #fff;
-    margin-top: 20px;
+    margin-top: 15px;
     font-size: 30px;
     height: 64px;
     line-height: 32px;
@@ -2057,7 +1990,6 @@ button:focus {
     transform: rotate(.05deg)
 }
 #desktop .c-choice-panel--metal-type .c-metal-type__choice-head span {
-    display: table-cell;
     vertical-align: middle;
     -webkit-transform: rotate(.05deg);
     transform: rotate(.05deg)
@@ -2087,7 +2019,7 @@ button:focus {
 #desktop .c-choice-panel--metal-type .c-metal-type__choice-description {
     color: #ffd173;
     font-size: 16px;
-    margin-top: 15px;
+    margin-top: 5px;
     height: 38px;
     line-height: 19px;
     -webkit-transform: rotate(.05deg);
@@ -2129,7 +2061,9 @@ button:focus {
     float: right;
     font-size: 20px;
     font-weight: 100;
-    cursor: pointer
+    cursor: pointer;
+    position: absolute;
+    margin-left: 530px
 }
 #desktop .c-choice-panel--metal-type .close-modal:focus,
 #desktop .c-choice-panel--metal-type .close:hover {
@@ -2144,15 +2078,6 @@ button:focus {
     top: 0;
     background: #fff;
     opacity: .5
-}
-#mobile .c-choice-panel--chain-length {
-    width: 100%;
-    max-width: 400px;
-    height: calc(100% - 39px);
-    margin: 50px auto 0;
-    text-align: center;
-    -webkit-transition: opacity .25s;
-    transition: opacity .25s
 }
 #mobile .c-choice-panel--chain-length.is-open {
     opacity: 1
@@ -2184,20 +2109,20 @@ button:focus {
     opacity: .5
 }
 #mobile .c-choice-panel--chain-length__choice:nth-child(1) {
-    left: 13%;
-    top: 24%
+    left: 23%;
+    top: 30%
 }
 #mobile .c-choice-panel--chain-length__choice:nth-child(2) {
-    left: 20%;
-    top: 38%
+    left: 29%;
+    top: 44%
 }
 #mobile .c-choice-panel--chain-length__choice:nth-child(3) {
-    left: 30%;
-    top: 52%
+    left: 36%;
+    top: 57%
 }
 #mobile .c-choice-panel--chain-length__choice:nth-child(4) {
-    left: 40%;
-    top: 64%
+    left: 48%;
+    top: 65%
 }
 #mobile .c-choice-panel--chain-length__nub {
     font-size: 8px;
@@ -2209,7 +2134,7 @@ button:focus {
 }
 #mobile .c-choice-panel--chain-length__info {
     position: absolute;
-    bottom: 100px;
+    bottom: 60px;
     left: 50%;
     width: 50%;
     display: inline-block;
@@ -2218,7 +2143,8 @@ button:focus {
     font-size: 10px;
     font-weight: 700;
     text-align: center;
-    border-top: 1px dashed #000;
+  	color: #fff;
+    border-top: 1px dashed #fff;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
 }
@@ -2236,18 +2162,18 @@ button:focus {
     margin-bottom: 45px;
     position: absolute;
     width: 100%;
-    top: 105px
+    top: 252px
 }
 #desktop .c-choice-panel--chain-length .c-choice:nth-child(1) {
-    margin-top: 135px;
+    margin-top: 0px;
     margin-right: 150px
 }
 #desktop .c-choice-panel--chain-length .c-choice:nth-child(2) {
-    margin-top: 30px;
+    margin-top: 40px;
     margin-left: -5px
 }
 #desktop .c-choice-panel--chain-length .c-choice:nth-child(3) {
-    margin-top: -4px;
+    margin-top: 0px;
     margin-left: 70px
 }
 #desktop .c-choice-panel--chain-length .c-choice:nth-child(4) {
@@ -2315,14 +2241,35 @@ button:focus {
     bottom: 50px;
     width: 100%
 }
+@media (min-height: 770px) {
+  	#desktop .c-choice-panel--chain-length .c-choice-panel__info {
+	    bottom: 70px
+    }
+}
+@media (min-height: 800px) {
+  	#desktop .c-choice-panel--chain-length .c-choice-panel__info {
+	    bottom: 110px
+    }
+}
+@media (min-height: 850px) {
+  	#desktop .c-choice-panel--chain-length .c-choice-panel__info {
+	    bottom: 150px
+    }
+}
+@media (min-height: 900px) {
+  	#desktop .c-choice-panel--chain-length .c-choice-panel__info {
+	    bottom: 200px
+    }
+}
 #desktop .c-choice-panel--chain-length .c-choice-panel__info div {
     font-weight: 700;
     width: 230px;
     margin: 0 auto;
     padding-top: 15px;
+    color: #fff;
     background-image: -webkit-gradient(linear, left top, right top, color-stop(10%, transparent), color-stop(50%, #fff), color-stop(100%, transparent));
     background-image: -webkit-linear-gradient(right, transparent 10%, #000 50%, transparent 100%);
-    background-image: linear-gradient(to left, transparent 10%, #000 50%, transparent 100%);
+    background-image: linear-gradient(to left, transparent 10%, #fff 50%, transparent 100%);
     background-position: top;
     background-size: 5px 2px;
     background-repeat: repeat-x
@@ -2601,7 +2548,7 @@ button:focus {
     padding: 21px 10px 0
 }
 #desktop .c-choice-panel--pendant-style .c-choice img.pendant-image {
-    max-width: 60px;
+    max-width: 80px;
     max-height: 80px;
     height: 80px
 }
